# dating-quiz-mvp

./: .env.template  .gitignore  AGENTS.md  Makefile  README.md  block-1.html  block-2.html  block-3.html  block-4.html  block-5.html  block-6.html  block-7.html  docker-compose.dev.yml  docker-compose.test-isolated.yml  docker-compose.test.yml  docker-compose.yml  generate.php  index.html  package.json  privacy-policy.html  refund-policy.html  tailwind.config.ts  terms.html
app/: layout.tsx  page.tsx
assets/: app.js  quiz.js  styles.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_20_1633-3bf3381ee982_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: bot.py  payment.py
backend/app/cli/: run_migrations.py
backend/app/core/: config.py  mobi_slon_events.py  notifications.py  security.py
backend/app/core/db/: session.py
backend/app/core/models/: payment.py
backend/app/schemas/: bot.py  payment.py
backend/app/services/: payment_service.py
backend/scripts/: run_typecheck_ratcheting.py
backend/tests/: test_access_token_format.py  test_app.db  test_payment_redirect.py
blocks/: block-1.html  block-2.html  block-3.html  block-4.html  block-5.html  block-6.html  block-7.html
bot/: Dockerfile  pyproject.toml
components/: HeroVideo.tsx  LayoutQuiz.tsx  ProgressBar.tsx  QuestionStep.tsx  TrackView.tsx
docs/: 01-project-overview.md  02-architecture.md  03-repository-structure.md  04-development-workflow.md  05-testing-strategy.md  06-deployment-and-environments.md  07-security-and-compliance.md  08-observability-and-operations.md  09-api-and-integrations.md  10-frontend-journeys-and-routing.md  11-troubleshooting.md  (+1 more)
lib/: analytics.ts
(+98 files in other folders)
