[project]
name = "dating-quiz-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "stripe==12.4.0",
    "sqlalchemy==2.0.39",
    "psycopg[binary]==3.2.6",
    "httpx==0.28.1",
    "pydantic-settings==2.10.1",
    "alembic==1.16.4",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=6.2.1",
    "pylint>=3.3.8",
    "pyright>=1.1.405",
    "pyupgrade>=3.20.0",
    "ruff>=0.13.2",
    "greenlet>=3.2.4",
]

[tool.isort]
profile = "black"
#known_first_party = ["src"]
#sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = [".."]
typeCheckingMode = "basic"
executionEnvironments = [
    { root = "app/core", typeCheckingMode = "strict" },
    { root = "app/schemas", typeCheckingMode = "strict" },
]

#[tool.poetry.scripts]
#ultrayield_backend = "src.main:main"

#[tool.pylint.main]
#ignore-patterns = ["(?i).*abi.*\\.py"]

#[tool.pylint."MESSAGES CONTROL"]
#disable = ["E1102","E1101","R0902","C0114","C0413","C0411","C0412","R0913","R0917"]

[tool.mypy]
strict = false

[tool.flake8]
max-line-length = 140

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "aiocache",
    "aiocache.*",
    "aiocache.serializers",
    "jwt",
    "jwt.*",
    "taskiq",
    "taskiq.*",
    "taskiq_aio_pika",
    "taskiq_aio_pika.*",
    "webauthn",
    "webauthn.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["G004", "E402"]
